--- a/css/style.css
+++ b/css/style.css
@@ -1,215 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
-/* a {
-  color: inherit;
-} */
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header-bg {
-  background-color: #000;
-}
-
-.header {
-  margin: 0 auto;
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  gap: 20px;
-}
-
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-
-.header-menu a {
-  position: relative;
-  padding: 16px 0;
-  color: #fff;
-  font-size: 18px;
-  display: inline-block;
-  font-family: "Poppins";
-  font-weight: 400;
-}
-
-.header-menu a:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #fff;
-  margin-top: 4px;
-  transition: 0.2s;
-}
-
-.header-menu a:hover:after {
-  width: 100%;
-}
-
-@media (max-width: 800px) {
-  .header-menu a {
-    background: #111111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-
-  .header-menu a:hover {
-    background: #2e2e2e;
-  }
-
-  .header-menu {
-    gap: 20px;
-  }
-
-  .header-menu a:after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header {
-    justify-content: center;
-  }
-  .header-menu {
-    gap: 20px;
-  }
-  .header-menu a {
-    padding: 12px 14px;
-    font-size: 14px;
-  }
-}
-
-/* ------------------------- ---------------------------------- */
-
-.introducao-bg {
-  background: #000;
-  box-shadow: inset 0 -120px white;
-}
-.introducao {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-  gap: 0px 40px;
-}
-
-.introducao-conteudo {
-  align-self: end;
-  padding-bottom: 200px;
-}
-.introducao h1 {
-  color: #fff;
-  margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
-}
-.introducao span {
-  color: #ffbb00;
-}
-
-.introducao p {
-  color: #b2b2b2;
-  margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  font-family: "Roboto";
-  font-weight: 400;
-}
-
-.introducao a {
-  display: inline-block;
-  padding: 16px 32px;
-  color: #332200;
-  background: linear-gradient(#ffbf00, #b38936);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  font-size: 18px;
-  line-height: 1.3;
-  text-transform: uppercase;
-  font-family: "Poppins";
-  font-weight: 600;
-}
-
-.introducao a:hover {
-  background: linear-gradient(#ffb60d, #e59317);
-}
-
-.introducao img {
-  height: 100%;
-  object-fit: cover;
-}
-
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 48px;
-  }
-  .introducao p {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 800px) {
-  .introducao {
-    grid-template-columns: 1fr;
-    gap: 32px;
-  }
-
-  .introducao-bg {
-    padding-top: 40px;
-    background: #111111;
-    box-shadow: inset 0 -60px white;
-  }
-
-  .introducao-conteudo {
-    padding-bottom: 0px;
-  }
-
-  .introducao h1 {
-    font-size: 32px;
-    margin-bottom: 16px;
-  }
-
-  .introducao p {
-    font-size: 18px;
-  }
-
-  .introducao img {
-    height: 300px;
-    width: 100%;
-  }
-}
-
-@media (max-width: 600px) {
-  .introducao h1 {
-    font-size: 36px;
-    margin-bottom: 16px;
-  }
-  .introducao p {
-    font-size: 16px;
-  }
-  .introducao a {
-    padding: 12px 16px;
-    font-size: 16px;
-  }
-}
+@import "./global/global.css";
+@import "./header/header.css";
+@import "./introducao/introducao.css";
+@import "./components/button.css";
+@import "./utilitarios/tipografia/tipografia.css";
+@import "./utilitarios/cores/cores.css";
