--- a/css/global/global.css
+++ b/css/global/global.css
@@ -18,4 +18,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+img[src$=".jpg"] {
+  border-radius: 4px;
+}
 /* ------------------------- ---------------------------------- */
