--- a/css/header/header.css
+++ b/css/header/header.css
@@ -3,14 +3,13 @@
 }
 
 .header {
-  margin: 0 auto;
-  max-width: 1200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
   gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
