--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import "./header/header.css";
 @import "./introducao/introducao.css";
 @import "./tecnologia/tecnologia.css";
+@import "./parceiros/parceiros.css";
+@import "./depoimento/depoimento.css";
 @import "./components/button.css";
 @import "./components/link.css";
 @import "./components/container.css";
