--- a/css/components/button.css
+++ b/css/components/button.css
@@ -8,9 +8,17 @@
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
+.button.secundario {
+  color: var(--cor-02);
+  background: var(--cor-10);
+}
 
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+.secundario:hover {
+  background: var(--cor-09);
 }
 
 @media (max-width: 600px) {
