--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,4 @@
 @import "./home/biciletas-lista.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
+@import "./home/seguros.css";
