--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr;
   background: var(--cor-p2);
   overflow: hidden;
-  margin-bottom: 120px;
+  /*   margin-bottom: 120px; */
 }
 
 .depoimento-conteudo {
