--- a/css/components/container.css
+++ b/css/components/container.css
@@ -4,3 +4,25 @@
   padding-right: 20px;
   padding-left: 20px;
 }
+
+/* internas */
+.titulo-bg {
+  background-color: var(--cor-11);
+  padding: 60px 0px;
+}
+
+.titulo p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .titulo-bg {
+    padding: 40px 0px;
+  }
+
+  .titulo p {
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
+}
