--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,5 @@
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
 @import "./home/seguros.css";
+
+@import "./termos/termos.css";
