--- a/css/components/button.css
+++ b/css/components/button.css
@@ -21,6 +21,24 @@
   background: var(--cor-09);
 }
 
+.button.seta {
+  display: flex;
+  align-items: center;
+}
+.button.seta::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 11px;
+  margin-left: 10px;
+  background-image: url("../../img/icones/seta.svg");
+  transition: transform 0.3s;
+}
+
+.button.seta:hover::after {
+  transform: translateX(10px);
+}
+
 @media (max-width: 600px) {
   .button {
     padding: 12px 16px;
