--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,5 +1,5 @@
 .bicicletas-bg {
-  background: var(--cor-12);
+  background: linear-gradient(to right, var(--cor-01) 33%, var(--cor-11) 0);
 }
 
 .bicicletas {
@@ -74,6 +74,9 @@
     gap: 20px;
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+  .bicicletas-bg {
+    background: var(--cor-11);
   }
 }
 
