--- a/css/home/biciletas-lista.css
+++ b/css/home/biciletas-lista.css
@@ -1,7 +1,7 @@
-.bicicletas {
+.bikes {
   padding: 60px 20px 80px 20px;
 }
-.bicicletas .container h2 {
+.bikes .container h2 {
   padding-bottom: 40px;
 }
 .bicicletas-lista {
