--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,3 +1,18 @@
+#bicicletas {
+  color: var(--cor-p1);
+}
+
+#bicicletas::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+  margin-top: 4px;
+  transition: 0.2s;
+}
+
 .bicicletas-bg {
   background: linear-gradient(to right, var(--cor-01) 33%, var(--cor-11) 0);
 }
@@ -77,6 +92,9 @@
   }
   .bicicletas-bg {
     background: var(--cor-11);
+  }
+  #bicicletas::after {
+    display: none;
   }
 }
 
