--- a/css/utilitarios/cores/cores.css
+++ b/css/utilitarios/cores/cores.css
@@ -11,6 +11,7 @@
   --cor-03: #dedede;
   --cor-02: #ededed;
   --cor-01: #f7f7f7;
+  --cor-lista: #00000020;
   /* primarias */
   --cor-gradient: linear-gradient(180deg, #ffbf00 0%, #b38936 100%);
   --cor-p4: #664400;
