--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,6 @@
 
 @import "./termos/termos.css";
 @import "./bicicletas/bicicletas.css";
+@import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
