--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
 
 @import "./termos/termos.css";
 @import "./bicicletas/bicicletas.css";
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/escolha.css";
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
