--- a/css/utilitarios/cores/cores.css
+++ b/css/utilitarios/cores/cores.css
@@ -9,7 +9,7 @@
   --cor-05: #b2b2b2;
   --cor-04: #cccccc;
   --cor-03: #dedede;
-  --cor-02: #ededed;
+  --cor-02: #e4e3e3;
   --cor-01: #f7f7f7;
   --cor-lista: #00000020;
   /* primarias */
