--- a/css/components/button.css
+++ b/css/components/button.css
@@ -7,6 +7,8 @@
   border-radius: 4px;
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  border: none;
+  cursor: pointer;
 }
 .button.secundario {
   color: var(--cor-02);
