--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 /* UTILITARIOS */
 @import "./utilitarios/tipografia/tipografia.css";
 @import "./utilitarios/cores/cores.css";
+@import "./utilitarios/formulario/formulario.css";
 
 /* HOME */
 @import "./home/introducao.css";
@@ -19,6 +20,8 @@
 @import "./home/depoimento.css";
 @import "./home/seguros.css";
 
+@import "./contato/lojas.css";
+@import "./contato/contato.css";
 @import "./termos/termos.css";
 @import "./bicicletas/bicicletas.css";
 @import "./bicicleta/bicicleta.css";
