--- a/css/utilitarios/formulario/formulario.css
+++ b/css/utilitarios/formulario/formulario.css
@@ -7,7 +7,6 @@
 .form label {
   display: block;
   font: 600 1rem/1.5rem "Poppins", sans-serif;
-  margin-bottom: 4px;
 }
 .col-2 {
   grid-column: span 2;
@@ -22,6 +21,7 @@
   padding: 12px;
   width: 100%;
   border-radius: 4px;
+  margin-top: 4px;
 }
 
 .form input[type="text"]:focus,
