--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -9,6 +9,8 @@
 .depoimento-conteudo {
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url("../../img/dec/bottom-right.svg") no-repeat bottom 40px right
+    40px;
 }
 .depoimento img {
   width: 100%;
@@ -42,10 +44,21 @@
   content: "”";
 }
 
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
+}
+
 @media (max-width: 800px) {
   .depoimento {
     grid-template-columns: 1fr;
     text-align: center;
+  }
+  .depoimento-conteudo {
+    padding: 40px 20px;
+    justify-self: center;
+    background: initial;
   }
   .depoimento-conteudo {
     padding: 40px 20px;
