--- a/css/home/seguros.css
+++ b/css/home/seguros.css
@@ -1,5 +1,9 @@
 .seguros-bg {
-  background-color: var(--cor-11);
+  background: var(--cor-11);
+}
+#home .seguros-bg {
+  background: var(--cor-11) url("../../img/dec/top-right.svg") no-repeat top
+    70px right 40px;
 }
 
 .seguros {
