--- a/css/utilitarios/formulario/formulario.css
+++ b/css/utilitarios/formulario/formulario.css
@@ -14,7 +14,8 @@
 
 .form input[type="text"],
 .form input[type="email"],
-.form textarea {
+.form textarea,
+.form select {
   font: 400 1rem/1.5rem "Roboto", sans-serif;
   border: 1px solid var(--cor-04);
   background: var(--cor-02);
@@ -26,7 +27,8 @@
 
 .form input[type="text"]:focus,
 .form input[type="email"]:focus,
-.form textarea:focus {
+.form textarea:focus,
+.form select:focus {
   outline: none;
   border-color: var(--cor-p1);
   background: var(--cor-01);
