--- a/css/global/header.css
+++ b/css/global/header.css
@@ -25,7 +25,7 @@
   display: inline-block;
 }
 
-.header-menu a:after {
+.header-menu a::after {
   content: "";
   position: absolute;
   display: block;
@@ -36,9 +36,11 @@
   transition: 0.2s;
 }
 
-.header-menu a:hover:after {
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
   width: 100%;
 }
+
 @media (max-width: 800px) {
   .header-menu a {
     background: var(--cor-11);
