--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,4 @@
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+@import "./menuMobile/menuMobile.css";
