--- a/css/global/header.css
+++ b/css/global/header.css
@@ -36,33 +36,21 @@
   transition: 0.2s;
 }
 
-.header-menu a:hover::after,
-.header-menu a.ativo::after {
-  width: 100%;
+@media (min-width: 800px) {
+  .header-menu a:hover::after,
+  .header-menu a.ativo::after {
+    width: 100%;
+  }
 }
 
 @media (max-width: 800px) {
   .header-menu a {
-    background: var(--cor-11);
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-
-  .header-menu a:hover {
-    background: var(--cor-10);
-  }
-
-  .header-menu {
-    gap: 20px;
-  }
-
-  .header-menu a:after {
-    display: none;
+    padding: 14px 16px;
   }
 }
 
 @media (max-width: 600px) {
-  .header {
+  /* .header {
     justify-content: center;
   }
   .header-menu {
@@ -71,5 +59,5 @@
   .header-menu a {
     padding: 12px 14px;
     font-size: 14px;
-  }
+  } */
 }
