--- a/css/menuMobile/menuMobile.css
+++ b/css/menuMobile/menuMobile.css
@@ -43,11 +43,11 @@
   }
   .header-menu {
     display: none;
-    position: absolute;
+    /*  position: absolute;
     top: 0;
     background: var(--cor-02);
     padding: 100px 20px 0 0;
-    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2); */
   }
   .header-menu.active {
     display: block;
@@ -55,7 +55,7 @@
     top: 0;
     background: var(--cor-02);
     padding: 100px 0px 0 0;
-    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(240, 234, 234, 0.37);
     animation: showModal 0.3s forwards;
   }
 
